lua-factory: fix crash on error

On grl_net_wc_request_async callback, we could be using the GError
pointer more then once in the function, which leads to non null value.

This patch clears the GError pointer and add guards to
grl_lua_operations_pcall.

https://bugzilla.gnome.org/show_bug.cgi?id=764814